syntax = "proto3";

package blog;

option go_package = "github.com/hsmtkk/fuzzy-eureka/blog/blog";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateRequest{
    Blog blog = 1;
}

message CreateResponse{
    Blog blog = 1;
}

message ReadRequest {
    string blog_id = 1;
}

message ReadResponse {
    Blog blog = 1;
}

message UpdateRequest{
    Blog blog = 1;
}

message UpdateResponse{
    Blog blog = 1;
}

message DeleteRequest {
    string blog_id = 1;
}

message DeleteResponse {
    string blog_id = 1;
}

service BlogService {
    rpc Create(CreateRequest) returns (CreateResponse){};
    rpc Read(ReadRequest) returns (ReadResponse){};
    rpc Update(UpdateRequest) returns (UpdateResponse){};
    rpc Delete(DeleteRequest) returns (DeleteResponse){};
}